--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.5.5"
+    "@astrojs/tailwind": "^6.0.2",
+    "aos": "^2.3.4",
+    "astro": "^5.5.5",
+    "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7"
   }
 }
